# tox-console-scripts

./: .gitignore  README.md  pylintrc  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: pipelines.yml
src/tox_console_scripts/: plugin.py  version.py
src/tox_console_scripts/helper/: console_scripts.py
tests/: conftest.py  test_plugin.py
tests/integration/: test_tox_console_scripts_int.py
tests/unit/: test_helper_console_scripts.py  test_tox_console_scripts.py  test_version.py
