[metadata]
name = tox-console-scripts
version = attr: tox_console_scripts.version.version
description = Create console_scripts of all system site packages within tox env
long_description = file: README.md
long_description_content_type = text/markdown
keywords = virtual, environments, isolated, testing
maintainer = Stanislav Levin
author = Stanislav Levin
url = https://github.com/stanislavlevin/tox-console-scripts
project_urls =
    Source=https://github.com/stanislavlevin/tox-console-scripts
    Tracker=https://github.com/stanislavlevin/tox-console-scripts/issues
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
  =src
zip_safe = True
python_requires = >=3.8
install_requires =
    tox
    pluggy

[options.packages.find]
where = src

[options.entry_points]
tox =
    tox_console_scripts=tox_console_scripts.plugin

[options.extras_require]
testing =
    pytest
    pytest-mock
